@@ -1,3 +1,8 @@
+2007-02-22  Viktor Mihajlovski  <mihajlov@localhost.localdomain>
+
+	* providerDrv.c: 
+	Fixed 1666311: Added support for old-style indication providers.
+
 2007-02-22  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>
 
 	* support.c: 
